--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,28 @@
-# History files
+# R specific
 .Rhistory
-.Rapp.history
-
-# Session Data files
 .RData
-.RDataTmp
-
-# User-specific files
 .Ruserdata
+.Rproj.user/
+.Rapp.history
+.Renviron
+.Rprofile
+.Rproj
 
-# Example code in package build process
-*-Ex.R
-
-# Output files from R CMD build
-/*.tar.gz
-
-# Output files from R CMD check
-/*.Rcheck/
+# R environment
+.Renv
+renv/
 
 # RStudio files
+*.Rproj
+.Rbuildignore
+.Rpres
 .Rproj.user/
-
-# produced vignettes
-vignettes/*.html
-vignettes/*.pdf
-
-# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
+.Rhistory
+.Renviron
 .httr-oauth
 
-# knitr and R markdown default cache directories
-*_cache/
-/cache/
+# Targets
+_targets/
 
-# Temporary files created by R markdown
-*.utf8.md
-*.knit.md
-
-# R Environment Variables
-.Renviron
-
-# pkgdown site
-docs/
-
-# translation temp files
-po/*~
-
-# RStudio Connect folder
-rsconnect/
+# Documentations
+docs/*
